--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,25 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: sport_aid_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: sport_aid_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: sport_aid_prod
+  username: sportaid
+  password: sportaid
+  host: aaqpt9s75zh12z.cqop2fodb2mj.ap-southeast-2.rds.amazonaws.com
+  port: 5432
