--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ test:
 
 production:
   <<: *default
-  database: sport_aid_prod
+  database: ebdb
   username: sportaid
   password: sportaid
   host: aaqpt9s75zh12z.cqop2fodb2mj.ap-southeast-2.rds.amazonaws.com
