Fix compile issue

--- a/watch_server/package.json
+++ b/watch_server/package.json
@@ -12,23 +12,24 @@
   "dependencies": {
     "auto-reload-brunch": ">= 1.0 < 1.9",
     "babel-brunch": "6.0.0",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "babel-preset-react": "^6.3.13",
+    "classnames": "^2.2.5",
     "clean-css-brunch": ">= 1.0 < 1.9",
     "css-brunch": ">= 1.0 < 1.9",
+    "google-map-react": "^0.23.0",
+    "immutable": "^3.8.1",
+    "isomorphic-fetch": "2.2.1",
     "javascript-brunch": ">= 1.0 < 1.9",
     "react": "0.14.0",
     "react-controllables": "^0.6.0",
     "react-datepicker": "0.17.0",
     "react-dom": "0.14.0",
     "react-inline-edit": "1.2.0",
+    "react-pure-render": "^1.0.2",
     "react-redux": "5.0.3",
     "redux": "3.6.0",
-    "isomorphic-fetch": "2.2.1",
-    "uglify-js-brunch": ">= 1.0 < 1.9",
     "redux-thunk": "2.2.0",
-    "classnames": "^2.2.5",
-    "google-map-react": "^0.23.0",
-    "immutable": "^3.8.1",
-    "react-pure-render": "^1.0.2"
+    "uglify-js-brunch": ">= 1.0 < 1.9"
   }
 }
