--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browserify-incremental": "3.1.1",
     "classnames": "2.2.5",
     "google-map-react": "0.23.0",
+    "hint.css": "^2.4.1",
     "immutable": "3.8.1",
     "isomorphic-fetch": "2.2.1",
     "lodash": "^4.17.4",
